# rust_wgpu_test

./: Cargo.toml
src/: main.rs  shader.wgsl
