[package]
name = "rust_wgpu_test"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.14.2"
bevy_prototype_lyon = "0.12.0"
bytemuck = { version = "1.19.0", features = ["derive"] }
futures = "0.3.31"
pollster = "0.3.0"
tokio = { version = "1.41.0", features = ["full"] }
wgpu = "22.1.0"
winit = "0.30.5"
